--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://scorain.github.io
+root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
