--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,12 @@ sitemap:
     path: sitemap.xml
     # template: ./sitemap_template.xml
 
+nofollow:
+	enable: true
+	exclude:
+    - exclude1.com
+    - exclude2.com
+
 neat_enable: true
 
 neat_html:
