--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,9 @@ theme: melody
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/Scorain/blog.git
+  branch: gh-pages
 
 search:
   path: search.xml
